public/css/main.css
html, body {
	padding: 0;
	margin: 0;
	height: 100%;
}

body {
	background-color: #ffffff;
	margin: 0;
	font-family: Helvetica, sans-serif;;
	overflow: hidden;
}
a {
	color: #ffffff;
}
h1 {
	display: inline-block;
	margin: 20px;
	z-index: 10;
	position: absolute;
	top: 0;
}
#bg-back {
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	background-color: white;	
}
	#bg-front:hover {
		background: white;
	}
#container {
	height: 100%;
	width: 100%;
	top: 0;
	position: absolute;
	z-index: 0;
}
#menu {
	position: absolute;
	bottom: 20px;
	width: 100%;
	text-align: center;
}

.element {
	width: 300px;
	height: 300px;
	box-shadow: 0px 0px 12px rgba(0,255,255,0.5);
	border: 1px solid rgba(127,255,255,0.25);
	text-align: center;
	cursor: default;
	opacity: 1.0;
}
#container > div > div {
	background: red;
	width: 0;
	height: 0;
	overflow: visible;
}

#container > div > div:hover > .element {
	opacity: 0.1;
}

#container > div > div:hover > .element:hover {
	opacity: 1.0;
	box-shadow: 0px 0px 12px rgba(0,255,255,0.75);
	border: 1px solid rgba(127,255,255,0.75);
}

	/*.element:hover ~ .element:not(.active) {
		opacity: 0.1;
	}*/

	/*.element:hover ~ .element:not(.active) {
		opacity: 0.1;
	}*/

	/*.element:hover ~ #container:not(.element) {
		opacity: 0.1;
	}*/
	.element .number {
		position: absolute;
		top: 20px;
		right: 20px;
		font-size: 12px;
		color: rgba(127,255,255,0.75);
	}

	.element .symbol {
		position: absolute;
		top: 0px;
		left: 0px;
		right: 0px;
		width: 260px;
		height: 120px;
		text-align: left;
		margin: 20px 20px 0 20px;
		font-size: 40px;
		font-weight: bold;
		color: rgba(255,255,255,0.75);
		text-shadow: 0 0 10px rgba(0,255,255,0.95);
		/*background: red;*/
	}

	.element .details {
		position: absolute;
		height: 50px;
		width: 260px;
		top: 250px;
		left: 0px;
		right: 0px;
		font-size: 20px;
		text-align: left;
		margin: 0 20px 0 20px;
		color: rgba(127,255,255,0.75);
		/*background: blue;*/
	}

button {
	color: rgba(0,0,0,0.75);
	background: transparent;
	outline: 1px solid rgba(0,0,0,0.1);
	border: 0px;
	padding: 5px 10px;
	cursor: pointer;
}
button:hover {
	background-color: rgba(0,0,0,0.1);
}
button:active {
	color: #000000;
	background-color: rgba(0,255,255,0.75);
}

.loaded-images {
	opacity: 0.1;
}

